Exercise Entität (controller, service, yaml)
